<resources>
    <string name="app_name">Shopy App</string>
    <string name="home">Home</string>
    <string name="favourite">Favorite</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="login">Login</string>
    <string name="enter_your_emails_and_password">Enter your emails and password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password ? </string>
    <string name="already_have_account">Already have account? <b><u><font color="#B987C2">Log In</font></u></b></string>
    <string name="don_t_have_an_account_sign_up_now">Don’t have an account, <b><u><font color="#B987C2">Sign Up</font></u></b></string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue</string>
    <string name="user_name">User Name</string>
    <string name="product">Product</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="select_color">Select Color</string>
    <string name="select_size">Select Size(US)</string>
    <string name="brand">BRAND</string>
    <string name="sku">SKU</string>
    <string name="weight">WEIGHT</string>
    <string name="state">STATE</string>
    <string name="category">CATEGORY</string>
    <string name="fitting">FITTING</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="orders">Orders History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="all_my_orders">All My Orders</string>
    <string name="dollar_currency">$</string>
    <string name="checkout">Checkout</string>
    <string name="address">Address</string>
    <string name="log_out">log Out</string>
    <string name="upload">Upload</string>
    <string name="sync">Sync</string>
    <string name="edit">Edit</string>
    <string name="Products">Products</string>
    <string name="confirm">Confirm</string>
    <string name="payment_method">Payment Method</string>
    <string name="saved_address">Saved Addresses</string>
    <string name="card_number">Card Number</string>
    <string name="card_number_hint">Enter Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_expired">Expired</string>
    <string name="card_holder_hint">Enter Card Holder Name</string>
    <string name="card_expired_hint">MM/YY</string>
    <string name="card_cvv">CVV code</string>
    <string name="card_cvv_hint">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="add_coupon_hint">Enter Your Coupon</string>
    <string name="city">City</string>
    <string name="city_name_hint">Enter City Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint">Enter Phone Number</string>
    <string name="street_name">Street Name</string>
    <string name="street_name_hint">Enter Street Name</string>
    <string name="building_number">Building Number</string>
    <string name="building_number_hint">Enter Building Number</string>
    <string name="flat_number">Flat Number</string>
    <string name="flat_number_hint">Enter Flat Number</string>
    <string name="mark_location">Mark Location</string>
    <string name="mark_location_hint">Enter a mark location near you</string>
    <string name="order_success">Order placed successfully</string>
    <string name="order_success_desc">Your order had been placed successfully and will arrive at your location within 3 to 4 working days</string>
    <string name="done">Done</string>
    <string name="x">x</string>
    <string name="add_address">Add Address</string>
    <string name="username">UserName</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">save</string>
    <string name="filter">Filter</string>
    <string name="login_first">Login First</string>
    <string name="not_logged_in_message">You need to Login to see your order history, wishlist and may other features</string>
    <string name="settings">Settings</string>
    <string name="wish_list">Wish List</string>
    <string name="no_saved_addresses">No Saved Addresses</string>
    <string name="not_saved_addresses_message">Let\'s start adding your shipping address</string>
    <string name="country">Country</string>
    <string name="address_tag">Address tag</string>
    <string name="default_address">(Default)</string>
    <string name="update_address">Update Address</string>
    <string name="delete_address">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_address_confirm">Are you sure you want to delete this address?\nCaution default address can\'t be deleted</string>
    <string name="something_went_wrong_please_try_again_later">something went wrong please try again later</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="location_permission_needed_message">We can help identify you current location but we need Location Permission</string>
    <string name="open_setting">Open Settings</string>
    <string name="location_disabled">Location Disabled</string>
    <string name="location_disabled_message">Please turn on Location access to find your current location</string>
    <string name="set_default_address">Set as default address</string>
    <string name="warning">"Warning "</string>
    <string name="warning_meesage">"make sure you upload data to server before log out "</string>
    <string name="currency">Currency</string>
    <string name="egp_currency">Egypt Pound (EGP)</string>
    <string name="usd_currency">United State Dollar (USD)</string>
    <string name="gbp_currency">Pound Sterling (GBP)</string>
    <string name="eur_currency">Euro (EUR)</string>
    <string name="change_currency_to">"currency changed to "</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="change_language_to">Language changed to </string>
    <string name="total">Total</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="service_fee">Service Fee</string>
    <string name="total_discount">Total Discount</string>
    <string name="_0_00">0.00</string>
    <string name="order_id">Order Id :</string>
    <string name="total_profile">Total :</string>
    <string name="are_you_sure">Are You Sure ?</string>
    <string name="will_delete_this_from_favorites">will delete this from favorites </string>
    <string name="please_login">Log in to access this feature</string>
    <string name="gust_message">can make account to add favorites and more feature</string>
    <string name="delete_item_confirm">are you sure you want to delete this item?</string>
    <string name="guest">Guest</string>
    <string name="skip"><![CDATA[Skip ->]]></string>
    <string name="add_to_favorite">Add Favorite</string>
    <string name="add_to_cart">Add Cart</string>
    <string name="favorite">Favorite</string>
    <string name="no_address_found_let_s_add_you_shipping_address">No Address found let\'s add you shipping address</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="pay_with_card">Pay with Card</string>
    <string name="tap_to_pay_now">Tap to pay now</string>
    <string name="minimum_one_item">Minimum one item</string>
    <string name="minimum_one_item_message">at leat one item can be placed in cart, if you want you can delete it</string>
    <string name="delete">Delete</string>
    <string name="loading_sign_Up">Create an account...</string>
    <string name="loading_login">Logging in…</string>


</resources>