<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_bar"
        android:title="@string/home" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/uncheck_favorite"
        android:title="@string/favourite" />
    <item
        android:id="@+id/searchResultFragment"
        android:icon="@drawable/search_bar"
        android:title="@string/search" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/cart_bar"
        android:title="@string/cart" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_bar"
        android:title="@string/profile" />
</menu>