<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.checkout.view.CheckoutFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toTopOf="@id/confirmBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/addressTxtV"
                    style="@style/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/addressEditTxt"
                    style="@style/sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/edit"
                    app:layout_constraintBottom_toBottomOf="@id/addressTxtV"
                    app:layout_constraintEnd_toEndOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/mapAddressImgV"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_75sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:elevation="8dp"
                    android:src="@drawable/map_location"
                    app:layout_constraintStart_toStartOf="@id/addressTxtV"
                    app:layout_constraintTop_toBottomOf="@id/addressTxtV" />

                <TextView
                    android:id="@+id/addressNameValueTxtV"
                    style="@style/sub_title"
                    android:textSize="@dimen/_20ssp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mapAddressImgV"
                    app:layout_constraintTop_toTopOf="@id/mapAddressImgV"
                    tools:text="House" />

                <TextView
                    android:id="@+id/addressValueTxtV"
                    style="@style/small_title"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    app:layout_constraintBottom_toBottomOf="@id/mapAddressImgV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mapAddressImgV"
                    app:layout_constraintTop_toBottomOf="@id/addressNameValueTxtV"
                    tools:text="flat number street name name name name city country code" />

                <TextView
                    android:id="@+id/ProductsTxtV"
                    style="@style/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/Products"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mapAddressImgV" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productsRecyclerV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/ProductsTxtV"
                    app:layout_constraintTop_toBottomOf="@+id/ProductsTxtV"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_checkout" />

                <TextView
                    android:id="@+id/paymentTxtV"
                    style="@style/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/payment_method"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/productsRecyclerV" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/paymentCardV"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_75sdp"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="@id/productsRecyclerV"
                    app:layout_constraintStart_toStartOf="@id/productsRecyclerV"
                    app:layout_constraintTop_toBottomOf="@id/paymentTxtV">

                    <ImageView
                        android:id="@+id/paymentMethodImgV"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/ma_symbol" />

                    <TextView
                        android:id="@+id/paymentCardTypeTxt"
                        style="@style/sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:text="@string/pay_with_card" />

                    <TextView
                        android:id="@+id/paymentCardNumberTxt"
                        style="@style/sub_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:textColor="?attr/colorPrimary"
                        android:text="@string/tap_to_pay_now" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_on_delivery"
                    app:layout_constraintStart_toStartOf="@id/paymentCardV"
                    style="@style/sub_title"
                    app:layout_constraintTop_toTopOf="@id/cashOnDeliverySwitch"
                    app:layout_constraintBottom_toBottomOf="@id/cashOnDeliverySwitch"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cashOnDeliverySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:layout_constraintEnd_toEndOf="@id/paymentCardV"
                    app:layout_constraintTop_toBottomOf="@id/paymentCardV"/>

                <TextView
                    android:id="@+id/couponTxtV"
                    style="@style/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/add_coupon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cashOnDeliverySwitch" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/couponTxtF"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:hint="@string/add_coupon_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/couponTxtV"
                    app:layout_constraintTop_toBottomOf="@id/couponTxtV">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/checkoutTotalTxtV"
            style="@style/sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/confirmBtn"
            android:text="@string/total" />

        <TextView
            android:id="@+id/checkoutTotalCurrencyTxtV"
            style="@style/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/checkoutTotalPriceTxtV"
            app:layout_constraintStart_toEndOf="@id/checkoutTotalPriceTxtV"
            app:layout_constraintTop_toTopOf="@id/checkoutTotalPriceTxtV"
            tools:text="@string/dollar_currency" />

        <TextView
            android:id="@+id/checkoutTotalPriceTxtV"
            style="@style/sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/checkoutTotalTxtV"
            app:layout_constraintTop_toBottomOf="@id/checkoutTotalTxtV"
            tools:text="33.33" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmBtn"
            style="@style/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/round_corners"
            android:backgroundTint="?attr/colorPrimary"
            android:drawableEnd="@drawable/ic_arrow_right_background"
            android:drawablePadding="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            android:paddingStart="@dimen/_16sdp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="?attr/colorBackgroundFloating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>