<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_8sdp"
    tools:context=".ui.orderconfirm.OrderConfirmFragment">

    <ImageView
        android:id="@+id/orderStateImgV"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200sdp"
        android:elevation="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/order_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderStateTxtV"
        style="@style/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/order_success"
        app:layout_constraintEnd_toEndOf="@id/orderStateImgV"
        app:layout_constraintStart_toStartOf="@id/orderStateImgV"
        app:layout_constraintTop_toBottomOf="@id/orderStateImgV" />

    <TextView
        android:id="@+id/orderStateDescriptionTxtV"
        style="@style/sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/order_success_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderStateTxtV" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/doneBtn"
        style="@style/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/round_corners"
        android:backgroundTint="?attr/colorPrimary"
        android:padding="@dimen/_8sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderStateDescriptionTxtV" />

</androidx.constraintlayout.widget.ConstraintLayout>